3.0.156.alpha.1 - 11th October 2023
- Added flight times.

3.0.155 - 11th October 2023
- Fixed a Lua error issue with 'Recent chat window' ('Chat').

3.0.154 - 11th October 2023
- Updated for game version 3.4.3.
- Added flight times.

3.0.152 - 4th October 2023
- Added flight times.

3.0.151 - 27th September 2023
- Added flight times.

3.0.150 - 20th September 2023
- Added flight times.

3.0.149 - 14th September 2023
- Fixed an issue with 'Enhance minimap' ('Interface') which caused the area under the minimap to be unclickable if you have moved the minimap.
- Added flight times.

3.0.148 - 5th September 2023
- Added flight times.

3.0.147 - 30th August 2023
- Added flight times.

3.0.146 - 23rd August 2023
- Added flight times.

3.0.144 - 8th August 2023
- Added flight times.

3.0.143 - 2nd August 2023
- Added flight times.

3.0.142 - 26th July 2023
- For 'Sell junk automatically' ('Automation'), increased the exclusion list limit to 2000 characters (was 600).
- Added flight times.

3.0.141 - 18th July 2023
- Added flight times.

3.0.140 - 12th July 2023
- The 'Resize mail text', 'Resize quest text' and 'Resize book text' options ('Text') now have a maximum font size of 30 (reduced from 36).
- Fixed an issue with 'Block shared quests' ('Social') which caused a few quests to be incorrectly declined.
- Added flight times.

3.0.139 - 5th July 2023
- Added flight times.

3.0.138 - 28th June 2023
- Updated LibDBIcon.
- Added flight times.

3.0.137 - 24th June 2023
- Updated for game version 3.4.2.
- The 'Disable bag automation' option ('System') no longer applies to mailboxes.
- Added flight times.

3.0.136 - 19th June 2023
- Added flight times. 

3.0.135 - 11th June 2023
- The /ltp slash command has returned.  /run leaplus() has been removed.
- PTR (3.4.2) - Fixed an issue with 'Recent chat window' which caused a Lua error when the window is shown.

3.0.134 - 3rd June 2023
- Added flight times.

3.0.133 - 27th May 2023