@@ -1,4 +1,5 @@
 3.0.156.alpha.1 - 11th October 2023
+- For 'Enhance minimap' ('Interface'), fixed an issue with the consolidated buffs frame layering.
 - Added flight times.
 
 3.0.155 - 11th October 2023
